# 6502Emulator

./: 6502Emulator  CMakeLists.txt
include/: emulator.h  errors.h  instructions.h  memory.h  myint.h  opcodes.h  output.h  processor.h
src/: emulator.c  errors.c  main.c  makefile  memory.c  output.c  processor.c
test/: debugprint.c  debugtools.h
